--- a/ProyectoFinal/SignalRChat/index.html
+++ b/ProyectoFinal/SignalRChat/index.html
@@ -302,7 +302,7 @@
 </head>
 <body>
     <div id="header">
-        SignalR Chat Room
+        <b>ChatRoom</b>
     </div>
     <br />
     <br />
@@ -311,11 +311,10 @@
     <div id="divContainer">
         <div id="divLogin" class="login">
             <div>
-                Your Name:<br />
-            <input id="txtNickName" type="text" class="textBox" />
+                <input placeholder="Nombre de Usuario" id="txtNickName" type="text" class="textBox" style="padding:8px;" />
             </div>
             <div id="divButton">
-                <input id="btnStartChat" type="button" class="submitButton" value="Start Chat" />
+                <input id="btnStartChat" type="button" class="submitButton" value="Iniciar Chat" />
             </div>
         </div>
 
