--- a/ProyectoFinal/SignalRChat/index.html
+++ b/ProyectoFinal/SignalRChat/index.html
@@ -70,7 +70,7 @@
 
                 var name = $("#txtNickName").val();
                 if (name.length > 0) {
-                    if (name.indexOf(' ') != -1) {
+                    if (name.indexOf(' ') == -1) {
                         chatHub.server.connect(name);
                     } else {
                         swal('Nombre de Usuario Invalido', 'El nombre de usuario no puede contener espacios en blanco.', 'error');
@@ -247,8 +247,8 @@
 
                        '</div>' +
                        '<div class="buttonBar">' +
-                          '<input id="txtPrivateMessage" class="msgText" type="text"   />' +
-                          '<input id="btnSendMessage" class="submitButton button" type="button" value="Send"   />' +
+                          '<input id="txtPrivateMessage" class="msgText" type="text" placeholder="Mensaje..." />' +
+                          '<input id="btnSendMessage" class="submitButton button" type="button" value="Enviar" />' +
                        '</div>' +
                     '</div>';
 
@@ -324,7 +324,7 @@
 
         <div id="divChat" class="chatRoom">
             <div class="title">
-                Welcome to Chat Room [<span id='spanUser'></span>]
+                Bienvenido Usuario: <span id='spanUser'></span>
 
             </div>
             <div class="content">
@@ -334,8 +334,8 @@
                 </div>
             </div>
             <div class="messageBar">
-                <input class="textbox" type="text" id="txtMessage" style="padding:10px;" />
-                <input id="btnSendMsg" type="button" value="Send" class="submitButton" />
+                <input class="textbox" type="text" id="txtMessage" placeholder="Mensaje..." style="padding:10px;" />
+                <input id="btnSendMsg" type="button" value="Enviar" style="padding:10px;" class="submitButton" />
             </div>
         </div>
 
